# Verisaria-AI

./: .gitignore  README.md  pyproject.toml
archive/v0/: v0-prototype-summary.md
archive/v0/workspace/: README.md  pyproject.toml
archive/v0/workspace/_wc_s3b/: save_73_20260605_032438.json
archive/v0/workspace/docs/: naming.md
archive/v0/workspace/human-test/: abyssal_oath_dome.json
archive/v0/workspace/reports/: engine_content_structure_recommendations.md  project_intake_baseline_2026-07-04.md
archive/v0/workspace/scripts/: adaptive_skyglass_playtest.py  adaptive_skyglass_third.py  adaptive_tidebreak_playtest.py  play.sh  (+66 more)
docs/design/: dynamic-world-model.md  emergent-fact-ledger.md  pack-authoring-guide.md  tui-design.md  worldclock-and-weather.md
docs/planning/: dynamic-prereq-test-task.md  grand-integration-pack-task.md  playability-audit-task.md  prereq-convergence-test-task.md  test-agent-handoff.md
src/verisaria/engine/: arbiter.py  campaign_loader.py  coherence.py  intent.py  npc_dialogue.py  npc_runtime.py  persistence.py  schemas.py  weather.py  world.py  worldclock.py
src/verisaria/protocol/: __init__.py  engine_session.py
src/verisaria/runtime/: session.py
tests/: test_campaign_loader.py  test_channel_c_logging.py  test_coherence.py  test_dynamic_world_vars.py  test_engine_session.py  test_escort.py  test_intent.py  test_intent_parse_diagnostics.py  test_npc_daily_rhythm.py  test_persistence.py  test_protocol.py  test_protocol_emission.py  test_tui_app.py  test_tui_render.py  test_weather.py  test_world_state.py  test_worldclock.py
(+358 files in other folders)
