[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verisaria"
version = "0.4.0"
description = "Verisaria — an LLM-driven RPG world engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# The TUI frontend's own dependency; the engine itself stays zero-extra-dep.
tui = [
    "textual>=0.80",
]

[project.scripts]
verisaria = "verisaria.frontends.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
